<resources>
    <string name="app_name">Omnidoc</string>
    <string name="login_to_omnidoc">Login to OmniDoc</string>
    <string name="signup">Signup</string>
    <string name="reveal_your_identity">Reveal your identity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="signup_to_omnidoc">Signup to OmniDoc</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>

</resources>