<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_to_omnidoc"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textColorLink="#9C27B0"
            android:textStyle="bold"
            android:textSize="35dp" />

        <EditText
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:autofillHints=""
            android:hint="@string/enter_age"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:hint="@string/enter_email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:textSize="30dp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textSize="30dp"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            android:text="@string/submit" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>